snapshot-tests/tests/snapshots/parser__bad_leading_zeros__two_zeros.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ two_zeros:1:5
  │
1 │ a = 00
  │     ^^ invalid integer: leading zeros are not allowed
